--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,69 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app 
- xmlns="http://java.sun.com/xml/ns/javaee"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
- version="3.0">
-
-
-<servlet>
-	<servlet-name>Connexion</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.Connexion</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>Connexion</servlet-name>
-	<url-pattern>/connexion</url-pattern>
-</servlet-mapping>
-
-
- <servlet>
-	<servlet-name>Deconnexion</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.Deconnexion</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>Deconnexion</servlet-name>
-	<url-pattern>/deconnexion</url-pattern>
-</servlet-mapping>
-
- <servlet>
-	<servlet-name>Logged</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.Logged</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>Logged</servlet-name>
-	<url-pattern>/logged</url-pattern>
-</servlet-mapping>
-
- <servlet>
-	<servlet-name>AdminListerUtilisateurs</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.AdminListerUtilisateurs</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>AdminListerUtilisateurs</servlet-name>
-	<url-pattern>/utilisateurs</url-pattern>
-</servlet-mapping>
-
- <servlet>
-	<servlet-name>AdminEditProfil</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.AdminEditProfil</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>AdminEditProfil</servlet-name>
-	<url-pattern>/editProfil</url-pattern>
-</servlet-mapping>
-
- <servlet>
-	<servlet-name>AdminActivation</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.AdminActivation</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>AdminActivation</servlet-name>
-	<url-pattern>/AdminActivation</url-pattern>
-</servlet-mapping>
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <display-name>PrivateMarket</display-name>
+  <servlet>
+    <servlet-name>Faces Servlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Faces Servlet</servlet-name>
+    <url-pattern>/faces/*</url-pattern>
+  </servlet-mapping>
 </web-app>
-
-
-
-
