jacques : gestion utilisateur v1.5

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,10 +6,20 @@
 http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
  version="3.0">
 
-
+  <servlet>
+    <servlet-name>Faces Servlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Faces Servlet</servlet-name>
+    <url-pattern>*.xhtml</url-pattern>
+    <url-pattern>pages/deditProfil.jsp</url-pattern>
+  </servlet-mapping>
+  
 <servlet>
 	<servlet-name>Connexion</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.Connexion</servlet-class>
+	<servlet-class>fr.dauphine.mido.privatemarket.servlets.Connexion</servlet-class>
 </servlet>
 <servlet-mapping>
 	<servlet-name>Connexion</servlet-name>
@@ -19,7 +29,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 
  <servlet>
 	<servlet-name>Deconnexion</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.Deconnexion</servlet-class>
+	<servlet-class>fr.dauphine.mido.privatemarket.servlets.Deconnexion</servlet-class>
 </servlet>
 <servlet-mapping>
 	<servlet-name>Deconnexion</servlet-name>
@@ -28,7 +38,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 
  <servlet>
 	<servlet-name>Logged</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.Logged</servlet-class>
+	<servlet-class>fr.dauphine.mido.privatemarket.servlets.Logged</servlet-class>
 </servlet>
 <servlet-mapping>
 	<servlet-name>Logged</servlet-name>
@@ -37,7 +47,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 
  <servlet>
 	<servlet-name>AdminListerUtilisateurs</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.AdminListerUtilisateurs</servlet-class>
+	<servlet-class>fr.dauphine.mido.privatemarket.servlets.AdminListerUtilisateurs</servlet-class>
 </servlet>
 <servlet-mapping>
 	<servlet-name>AdminListerUtilisateurs</servlet-name>
@@ -46,7 +56,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 
  <servlet>
 	<servlet-name>AdminForward</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.AdminForward</servlet-class>
+	<servlet-class>fr.dauphine.mido.privatemarket.servlets.AdminForward</servlet-class>
 </servlet>
 <servlet-mapping>
 	<servlet-name>AdminForward</servlet-name>
@@ -55,13 +65,21 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 
  <servlet>
 	<servlet-name>AdminActivation</servlet-name>
-	<servlet-class>fr.dauphine.mido.as.projet.servlets.AdminActivation</servlet-class>
+	<servlet-class>fr.dauphine.mido.privatemarket.servlets.AdminActivation</servlet-class>
 </servlet>
 <servlet-mapping>
 	<servlet-name>AdminActivation</servlet-name>
 	<url-pattern>/AdminActivation</url-pattern>
 </servlet-mapping>
 
+ <servlet>
+	<servlet-name>Page</servlet-name>
+	<servlet-class>fr.dauphine.mido.privatemarket.servlets.Page</servlet-class>
+</servlet>
+<servlet-mapping>
+	<servlet-name>Page</servlet-name>
+	<url-pattern>/redirection</url-pattern>
+</servlet-mapping>
 </web-app>
 
 
